fix unaligned logo for native

--- a/client/src/assets/css/stock.css
+++ b/client/src/assets/css/stock.css
@@ -416,7 +416,7 @@ input, .MuiInputBase-root, span {
 @media screen and (max-width: 650px) and (max-height: 825px){
 
   .landing-logo  {
-    padding-top: 5em;
+    padding-top: 10em;
   }
 
   .integration-logo {
